--- a/provisioning/image/ansible/05_app.yml
+++ b/provisioning/image/ansible/05_app.yml
@@ -13,7 +13,7 @@
       file: path=/home/isucon/repos/private_isu.git state=absent
     - name: clone repos
       git:
-        repo=https://github.com/catatsuy/private-isu.git
+        repo=https://github.com/neko-neko/private-isu-2017
         dest=/home/isucon/repos/private_isu.git
     - name: remove .git
       file: path=/home/isucon/repos/private_isu.git/.git state=absent
