--- a/provisioning/image/ansible/02_mysql.yml
+++ b/provisioning/image/ansible/02_mysql.yml
@@ -5,3 +5,4 @@
   tasks:
     - apt: name=mysql-server
     - apt: name=memcached
+    - shell: mysql -u root -NBe 'ALTER USER "root"@"localhost" IDENTIFIED WITH mysql_native_password BY "";'
