--- a/provisioning/image/ansible/06_createdb.yml
+++ b/provisioning/image/ansible/06_createdb.yml
@@ -7,4 +7,7 @@
     - name: create mysqldump
       get_url: url=https://s3-ap-northeast-1.amazonaws.com/neko-neko-files/dump.sql.bz2 dest=/home/isucon/backup/mysqldump.sql.bz2 force=1
     - name: create database
-      shell: bzcat /home/isucon/backup/mysqldump.sql.bz2 | mysql -u root
+      mysql_db:
+        name: all
+        state: import
+        target: /home/isucon/backup/mysqldump.sql.bz2
